<resources>
    <string name="app_name"></string>
    <string name="title_activity_user_map">Map</string>
    <string name="title_activity_about_us"></string>
    <string name="title_activity_personalize_device"></string>
    <string name="title_activity_main_menu">main_menu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_string">Menu</string>
    <string name="menu_aboutUs">About Us</string>
    <string name="menu_personalize">Personalize Your Device</string>
    <string name="home_button">Home</string>
    <string name="countdown_1">1</string>
    <string name="countdown_2">2</string>
    <string name="countdown_3" />
    <string name="instructions_string">To get help, hold down the button for 3 seconds. Then, select the type of help you need.</string>
    <string name="personalize_device_title">Personalize Device</string>
    <string name="personalize_title">Personalize Your Device</string>
    <string name="personalize_description">Enter your information to make it easier to locate or contact you in the event of an emergency</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="dob">Date of Birth</string>
    <string name="phoneNumber">Phone Number</string>
    <string name="streetAddress">Street Address</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="zip_code">Zip Code</string>
    <string name="save">Save</string>
    <string name="clear">Clear</string>
    <string name="menu">Menu</string>
    <string name="pronouns">Pronouns</string>
    <string name="about_us_title">About Buoy</string>
    <string name="about_us_paragraph">"Buoy was created as a way to respond to crises in a non-violent manner with a focus on conflict de-escalation and safety for all parties. In a world of discrimination and brutality, nobody should have to lose their life due to a 911 call. Buoy offers users a way to call for help quickly, quietly, and safely. Press and hold the Buoy button and then choose from the following types of help and a trained professional will respond to your crisis as soon as possible. "</string>
    <string name="types_of_help_title">Types of Help Available</string>
    <string name="personal_safety">Personal Safety</string>
    <string name="domestic_header">domestic</string>
    <string name="domestic2">Domestic</string>
    <string name="mental_header">Mental Illness</string>
    <string name="mental_header2">Mental Health</string>
    <string name="retail_header">Retail &amp; Service</string>
    <string name="conflict_header"><![CDATA[Conflict De-Escalation & Resolution]]></string>
    <string name="personal_safety_explanation">"Select this if you are worried about the safety of yourself, others, or your community, to include: suspicious activity, being followed home, possible home intruders, sexual harassment, etc. "</string>
    <string name="domestic_explanation">"Select this if you are suffering from domestic violence or any problem involving family members, especially children. "</string>
    <string name="mental_health_explanation">Select this is if you or someone else is experiencing suicidal thoughts, emotional turmoil, erratic behavior, drug abuse, self-harm, etc.</string>
    <string name="retail_explanation">"Select this if you need to bounce an unruly customer, if you think a store has violated your rights, you encounter a fake id, you encounter counterfeit money, etc. "</string>
    <string name="im_safe">Press &amp; Hold for 10 seconds Once You Are Safe</string>
    <string name="conflict_explanation">Select this if an argument needs to be resolved, a fight needs to be broken up, a dispute needs to be settled, etc.</string>
    <string-array name="types"><item>Personal Safety</item><item>Domestic</item><item>Mental Health</item><item>Retail and Service</item><item>Conflict De-Escalation &amp; Resolution</item></string-array>
</resources>